ros2_robot_ws/log/build_2024-07-03_17-02-28/gripper_sub/stderr.log
  File "/home/pi/handsystem/ros2_robot_ws/install/gripper_sub/lib/python3.10/site-packages/gripper_sub/subscriber_member_function.py", line 135
    else
        ^
SyntaxError: expected ':'

